# storage-forecast

./: .gitignore  Cargo.toml  license  readme.md
.github/workflows/: build.yml  release.yml
src/: lib.rs  main.rs
tests/: integration_test.rs
