[package]
name = "storage-forecast"
version = "1.0.0"
edition = "2021"
rust-version = "1.66.1"
license = "Apache License 2.0"
author = "Felix Michel"

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "storage-forecast"
path = "src/main.rs"


[dependencies]
chrono = "0.4.29"
clap = { version = "=4.2.1", features = ["derive"]}
humansize = "2.1.3"
humantime = "2.1.0"
left-pad = "1.0.1"
linreg = "0.2.0"
walkdir = "2.4.0"

[dev-dependencies] 
random-string = "1.0.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
